--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ bluechairs.z5
 Final Project - Build Walkthrough (1).pdf
 Final Project - Instruction List (1).pdf
 Final Project - Main (1).pdf
+dis.txt
