--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Final Project - Build Walkthrough (1).pdf
 Final Project - Instruction List (1).pdf
 Final Project - Main (1).pdf
 dis.txt
+Andrew And Kiel Z Machine.zip
